--- a/src/components/contact-us.css
+++ b/src/components/contact-us.css
@@ -19,22 +19,12 @@
     margin: 10px;
 }
 
-.map-container {
-    width: 100%;
-    max-width: 400px;
-    height: 200px;
-    border: 2px solid #206594;
-    border-radius: 6px;
-    overflow: hidden;
-}
-
-
 h3 {
-    border-left: 4px solid #00bfff;
+    border-left: 4px solid #dbc49e;
     padding-left: 10px;
     margin-bottom: 10px;
     font-size: 1.2em;
-    color: #00bfff;
+    color: #dbc49e;
 }
 
 ul {
