--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,44 +1,17 @@
-/*navbar.css*/
-.top-bar {
-    background-color: #206594;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 20px;
-    font-size: 0.8em;
-    z-index: 1000;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-}
-
-.contact a {
-    color: white;
-    text-decoration: none;
-    margin-right: 10px;
-}
-
-.social-icons a {
-    color: white;
-    margin-left: 10px;
-    text-decoration: none;
-}
-
 .main-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 4px 20px;
-    margin: 0;
+    padding: 4px;
     background-color: white;
     position: fixed;
-    top: 33px;
-    left: 0;
     width: 100%;
+    z-index: 10;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    z-index: 999;
+}
+
+.header-spacer {
+    height: 115px; 
 }
 
 .logo {
@@ -47,12 +20,13 @@
 }
 
 body {
-    padding-top: 120px; /* Adjust depending on total navbar height */
+    padding-top: 0px; 
 }
 
 .nav-bar {
     display: flex;
     gap: 30px;
+    padding-right: 30px;
 }
 
 .nav-bar a {
@@ -68,6 +42,6 @@ body {
     display: block;
     margin-top: 5px;
     height: 2px;
-    background: #1b4f72;
+    background: #dbc49e;
     width: 100%;
 }
